[gd_scene load_steps=4 format=3 uid="uid://d1giuihtglqfc"]

[ext_resource type="Script" uid="uid://4s6ysesrvoiw" path="res://Scripts/Card Scripts/Backfire.gd" id="1_grup3"]
[ext_resource type="Texture2D" uid="uid://bj0uc0poslc66" path="res://Asset/pic/Card/Backfire.png" id="2_33wu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gftpj"]
size = Vector2(96, 128)

[node name="Backfire" type="Node2D"]
script = ExtResource("1_grup3")
card_name = "Backfire"
card_description = "Cause bullets to go slowly go opposite direction."
stat_change = "DMG + 4"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_33wu4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_gftpj")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
